# map

./: .gitignore  README.md  pyproject.toml
scripts/: download_map_assets.py
tests/: test_geojson_data.py  test_renderer.py  test_server.py
visited_china_map/: __init__.py  data.py  geojson_data.py  renderer.py  server.py
visited_china_map/assets/: china_city_boundaries.geojson
